# PlugInJUCE

./: .gitignore  README.md  plugin1.jucer
JuceLibraryCode/: JucePluginDefines.h
plugin1/: .gitignore  CMakeLists.txt  juce
plugin1/Builds/LinuxMakefile/: Makefile
plugin1/JuceLibraryCode/: JuceHeader.h
plugin1/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbPluginEditor.cpp  ReverbPluginEditor.h
plugin2/: CMakeLists.txt  README.md
plugin2/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
